<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="7"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/weightTextView"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/weight"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@android:color/primary_text_light"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="1" />

        <EditText
            android:id="@+id/heightTextView"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/height"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@android:color/primary_text_light"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/bmiValueTextView"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:gravity="center"
            android:text="@string/bmiValueDefault"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="70sp"
            app:layout_column="0"
            app:layout_row="3" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>